<resources>
    <string name="app_name">Hello Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Início</string>
    <string name="menu_bills">Contas</string>
    <string name="menu_goals">Metas</string>
    <string name="menu_addresses">Endereços</string>
    <string name="menu_reports">Relatórios</string>
    <string name="menu_user_profile">Perfil</string>
    <string name="menu_section_configuration">Configurações</string>
    <string name="menu_notifications">Notificações</string>
</resources>
