<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.com.hellohome.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_bills"
        android:name="br.com.hellohome.ui.bill.BillsFragment"
        android:label="@string/menu_bills"
        tools:layout="@layout/fragment_bills" />

    <fragment
        android:id="@+id/nav_goals"
        android:name="br.com.hellohome.ui.goal.GoalsFragment"
        android:label="@string/menu_goals"
        tools:layout="@layout/fragment_goals" />

    <fragment
        android:id="@+id/nav_addresses"
        android:name="br.com.hellohome.ui.address.AddressesFragment"
        android:label="@string/menu_addresses"
        tools:layout="@layout/fragment_addresses" />

    <fragment
        android:id="@+id/nav_reports"
        android:name="br.com.hellohome.ui.report.ReportsFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/nav_user_profile"
        android:name="br.com.hellohome.ui.user.UserProfileFragment"
        android:label="@string/menu_user_profile"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="br.com.hellohome.ui.notification.NotificationsFragment"
        android:label="@string/menu_user_profile"
        tools:layout="@layout/fragment_reports" />

</navigation>